--- a/FoodOS.css
+++ b/FoodOS.css
@@ -1,90 +1,84 @@
 /* CSS Reset */
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
 /* CSS Variables */
-:root{
+:root {
     --navbar-height: 59px;
 }
 
 /* Navigation Bar */
-#navbar{
+#navbar {
     display: flex;
     align-items: center;
-    position: sticky;    
+    position: sticky;
 }
 
-.item{
-    margin-left:20px;
+.item {
+    margin-left: 20px;
 }
-#navbar::before{
+
+#navbar::before {
     content: "";
     background-color: black;
     position: absolute;
-    top:0px;
-    left:0px;
+    top: 0px;
+    left: 0px;
     height: 100%;
-    width:100%;
+    width: 100%;
     z-index: -1;
-    opacity: 0.7;
+    opacity: 0.3;
 }
 
 /* Navigation Bar: Logo and Image */
-.Mainlogo{
-    font-size:30px;
-    font-weight:Bolder;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode';
+.Mainlogo {
+    font-size: 30px;
+    font-weight: Bolder;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode';
     font-style: bold;
     /* comment */
 }
-      .container{
-        min-height: 100vh;
-        justify-content: center;
-        align-items: center;
-        display: flex;
-        text-align: center;
-        position: relative;
-        top:-340px; 
-        left:360px;
-        cursor: pointer;
-        border: 0;
-        border-radius: 4px;
-        font-weight: 600;
-        margin: 0 10px;
-        width: 100px;
-        padding: 10px 0;
-        box-shadow: 0 0 20px rgba(104, 85, 224, 0.2);
-        transition:0.3s;
-        height:20px;
-      }
-      
-      #reg {
-        color: white;
-        background-color: rgba(104, 85, 224, 1);
-      }
-      
-      #log {
-        color: rgb(104, 85, 224);
-        background-color: rgba(255, 255, 255, 1);
-        border: 1px solid rgba(104, 85, 224, 1);
-      }
-      
-      .container:hover {
-        color: white;
-        width: 20px;;
-        box-shadow: 0 0 20px rgba(104, 85, 224, 0.6);
-        background-color: rgba(104, 85, 224, 1);
-      }
-      
-      
+.header {
+    padding-block: 1rem;
+    padding-inline: 1rem;   
+    display: flex;
+    justify-content: space-between;
+    background-color: black;
 
-.glow{
+}
+.container {
+    display: flex;
+    gap: 2rem;
+
+}
+.container button {
+    padding-inline: 1rem;
+    cursor: pointer;
+    border: none;
+    border-radius: 5px;
+
+}
+#reg {
+    color: white;
+    background-color: rgba(104, 85, 224, 1);
+}
+
+#log {
+    color: rgb(104, 85, 224);
+    background-color: rgba(255, 255, 255, 1);
+    border: 1px solid rgba(104, 85, 224, 1);
+}
+
+
+
+
+.glow {
     font-size: 20px;
     color: #fff;
     text-align: center;
@@ -93,36 +87,36 @@ html{
 
 @-webkit-keyframes glow {
     from {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073,
-       0 0 60px #e60073, 0 0 70px #e60073;
+        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073,
+            0 0 60px #e60073, 0 0 70px #e60073;
     }
-    
+
     to {
-      text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6,
-       0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+        text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6,
+            0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
     }
-  }
+}
 
 /* #logo img{ */
-    /* height: 100px; */
-    /* margin: 3px 6px; */
+/* height: 100px; */
+/* margin: 3px 6px; */
 /* } */
 
 
 /* Navigation Bar: List Styling */
 
-#navbar ul{
+#navbar ul {
     display: flex;
     font-family: 'Shooman', cursive;
-    
+
 }
 
-#navbar ul li{ 
+#navbar ul li {
     list-style: none;
     font-size: 1.3rem;
 }
 
-#navbar ul li a{
+#navbar ul li a {
     color: white;
     display: block;
     padding: 3px 22px;
@@ -130,51 +124,53 @@ html{
     text-decoration: none;
 }
 
-#navbar ul li a:hover{
+#navbar ul li a:hover {
     color: black;
     background-color: white;
 }
 
 /* Home Section */
-#home{
+#home {
     display: flex;
     flex-direction: column;
-    padding:3px 200px;
+    padding: 3px 200px;
     height: 550px;
     justify-content: center;
     align-items: center;
 }
 
-#home::before{ 
+#home::before {
     content: "";
     position: absolute;
     background: url('../bg.jpg') no-repeat center center/cover;
     height: 642px;
-    top:0px;
-    left:0px;
+    top: 0px;
+    left: 0px;
     width: 100%;
     z-index: -1;
-    opacity:0.89;
+    opacity: 0.89;
 }
 
-#home h1{
-    color:white;
+#home h1 {
+    color: white;
     text-align: center;
     font-family: 'Bree Serif', serif;
 }
 
-#home p{
-    color:white;
+#home p {
+    color: white;
     text-align: center;
     font-size: 1.5rem;
     font-family: 'Bree Serif', serif;
 }
+
 /* Services Section */
-#services{
+#services {
     margin: 34px;
     display: flex;
 }
-#services .box{ 
+
+#services .box {
     border: 2px solid brown;
     padding: 34px;
     margin: 2px 55px;
@@ -183,52 +179,53 @@ html{
     margin-bottom: 20px;
 }
 
-#services .box img{ 
-   height: 160px;
-   margin: auto;
-   display: block;
+#services .box img {
+    height: 160px;
+    margin: auto;
+    display: block;
 }
 
-#services .box p{
+#services .box p {
     font-family: 'Bree Serif', serif;
 
-} 
+}
 
 /* Clients Section */
-#client-section{ 
+#client-section {
     position: relative;
 }
 
-#client-section::before{
- content: "";
- position: absolute;
- background: url('../bg.jpg');
- width: 100%;
- height: 100%;
- z-index: -1;
- opacity: 0.3;
+#client-section::before {
+    content: "";
+    position: absolute;
+    background: url('../bg.jpg');
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.3;
 }
 
-#clients{
+#clients {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.client-item{
+.client-item {
     padding: 34px;
 }
 
-#clients img{
+#clients img {
     height: 124px;
 }
 
 
 /* Contact Section */
-#contact{
+#contact {
     position: relative;
 }
-#contact::before{
+
+#contact::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -238,51 +235,53 @@ html{
     background: url('../contact.jpg') no-repeat center center/cover;
 
 }
-#contact-box{
+
+#contact-box {
     display: flex;
     justify-content: center;
     align-items: center;
     padding-bottom: 34px;
 }
-#contact-box input, 
-#contact-box textarea{
+
+#contact-box input,
+#contact-box textarea {
     width: 100%;
     padding: 0.5rem;
     border-radius: 9px;
     font-size: 1.1rem;
-} 
+}
 
-#contact-box form{
+#contact-box form {
     width: 40%;
 }
 
-#contact-box label{
-   font-size: 1.3rem;
-   font-family: 'Bree Serif', serif;
+#contact-box label {
+    font-size: 1.3rem;
+    font-family: 'Bree Serif', serif;
 
 }
 
 
-footer{
+footer {
     background: black;
     color: white;
     padding: 9px 20px;
 }
 
 /* Utility Classes */
-.h-primary{
+.h-primary {
     font-family: 'Bree Serif', serif;
     font-size: 3.8rem;
     padding: 12px;
 }
 
-.h-secondary{
+.h-secondary {
     font-family: 'Bree Serif', serif;
     font-size: 2.3rem;
     padding: 12px;
 }
 
-.btn{
+.btn {
     padding: 6px 20px;
     border: 2px solid white;
     background-color: brown;
@@ -290,9 +289,9 @@ footer{
     margin: 17px;
     font-size: 1.5rem;
     border-radius: 10px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.center{
+.center {
     text-align: center;
 }
