--- a/FoodOS.css
+++ b/FoodOS.css
@@ -15,25 +15,35 @@ html {
 
 /* Navigation Bar */
 #navbar {
-    display: flex;
-    align-items: center;
     position: sticky;
+    align-items:center;
+    width:fit-content;
+    
 }
 
 .item {
-    margin-left: 20px;
+    
+    
+}
+#navbar{
+    background-color: red;
+
 }
 
 #navbar::before {
     content: "";
-    background-color: black;
+    background-color:black;
     position: absolute;
     top: 0px;
-    left: 0px;
+    /* left: 0px; */
     height: 100%;
     width: 100%;
     z-index: -1;
-    opacity: 0.3;
+    opacity: 0.7;
+    float:left;
+    width:1350px;
+    margin-right: 20px;
+    
 }
 
 /* Navigation Bar: Logo and Image */
@@ -44,19 +54,41 @@ html {
     font-style: bold;
     /* comment */
 }
-.header {
-    padding-block: 1rem;
-    padding-inline: 1rem;   
-    display: flex;
-    justify-content: space-between;
-    background-color: black;
+#logo{
+    margin-top: 50px;
+    margin-block:unset ;
 
 }
-.container {
+
+#navbar ul {
     display: flex;
-    gap: 2rem;
+    font-family:Arial, Helvetica, sans-serif
+    
 
 }
+
+#navbar ul li {
+    list-style: none;
+    font-size: 1.3rem;
+}
+
+#navbar ul li a {
+    color: white;
+    display: block;
+    padding: 3px 22px;
+    border-radius: 20px;
+    text-decoration: none;
+}
+
+#navbar ul li a:hover {
+    color: black;
+    background-color: white;
+}
+
+
+
+
+
 .container button {
     padding-inline: 1rem;
     cursor: pointer;
@@ -64,18 +96,6 @@ html {
     border-radius: 5px;
 
 }
-#reg {
-    color: white;
-    background-color: rgba(104, 85, 224, 1);
-}
-
-#log {
-    color: rgb(104, 85, 224);
-    background-color: rgba(255, 255, 255, 1);
-    border: 1px solid rgba(104, 85, 224, 1);
-}
-
-
 
 
 .glow {
@@ -104,30 +124,6 @@ html {
 
 
 /* Navigation Bar: List Styling */
-
-#navbar ul {
-    display: flex;
-    font-family: 'Shooman', cursive;
-
-}
-
-#navbar ul li {
-    list-style: none;
-    font-size: 1.3rem;
-}
-
-#navbar ul li a {
-    color: white;
-    display: block;
-    padding: 3px 22px;
-    border-radius: 20px;
-    text-decoration: none;
-}
-
-#navbar ul li a:hover {
-    color: black;
-    background-color: white;
-}
 
 /* Home Section */
 #home {
